<resources>
    <string name="app_name">TD_BDD</string>
    <string name="niveau">Niveau :</string>
    <string name="inscriptions">Inscriptions</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="pseudo">Pseudo :</string>
    <string name="association">Association :</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe :</string>
    <string name="disponibilit_s_pour_la_semaine">Disponibilités pour la semaine :</string>
    <string name="commentaires">Commentaires :</string>
    <string name="confirmer">Confirmer :</string>
    <string name="lundi">Lundi</string>
    <string name="jeudi">Jeudi</string>
    <string name="mercredi">Mercredi</string>
    <string name="d_butant">Débutant</string>
    <string name="vendredi">Vendredi</string>
    <string name="mardi">Mardi</string>
    <string name="interm_diaire">Intermédiaire</string>
    <string name="expert">Expert</string>
    <string name="pseudonyme">Pseudonyme</string>
</resources>